k8s/backend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: uday27/notes-app-backend:latest

          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: notes-app

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
