k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: notes-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: uday27/notes-app-frontend:latest

          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: notes-app
spec:
  type: NodePort

  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
