k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: notes-app
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo
          image: mongo:7

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: notes-app
spec:
  selector:
    app: mongo

  ports:
    - port: 27017
      targetPort: 27017

  type: ClusterIP
